Address more SQ issues